--- a/backend/ecom/templates/email/vendor_sale.html
+++ b/backend/ecom/templates/email/vendor_sale.html
@@ -92,7 +92,7 @@
                                                                         <tr>
                                                                             <td width="" style="padding: 0px 40px;" class="m_1429413934428186810mlContentOuter">
                                                                                 <h1 style="font-family: 'Inter', sans-serif; color: #ffffff; font-size: 35px; line-height: 125%; font-weight: 400; margin: 0 0 10px 0;">
-                                                                                    <strong><span style="line-height: 125%; color: rgb(151, 88, 138);">Order Confirmation!</span></strong>
+                                                                                    <strong><span style="line-height: 125%; color: rgb(151, 88, 138);">New Sale Details!</span></strong>
                                                                                 </h1>
                                                                             </td>
                                                                         </tr>
@@ -143,7 +143,7 @@
                                                                                             <strong>Hey, </strong>
                                                                                             <strong>
                                                                                                 <span style="line-height: 150%; color: rgb(78, 72, 224);">
-                                                                                                    <span style="line-height: 150%; color: rgb(25, 102, 255);"><span style="line-height: 150%; color: rgb(151, 88, 138);">{{ order.full_name }}!</span></span>
+                                                                                                    <span style="line-height: 150%; color: rgb(25, 102, 255);"><span style="line-height: 150%; color: rgb(151, 88, 138);">{{ vendor.name }}!</span></span>
                                                                                                 </span>
                                                                                             </strong>
                                                                                             <strong>
@@ -193,7 +193,7 @@
                                                                         <tr>
                                                                             <td width="" style="padding: 0px 40px;" class="m_1429413934428186810mlContentOuter">
                                                                                 <p style="font-family: 'Inter', sans-serif; color: #111111; font-size: 14px; line-height: 150%; margin: 0 0 10px 0; font-weight: 400; margin-bottom: 0;">
-                                                                                    Thanks for shopping with XoXo <br> Your order ID is <span style="line-height: 150%; color: rgb(151, 88, 138);">#{{ order.oid }}</span>.
+                                                                                    Thanks for selling with XoXo <br> The order ID is <span style="line-height: 150%; color: rgb(151, 88, 138);">#{{ order.oid }}</span>.
                                                                                 </p>
                                                                             </td>
                                                                         </tr>
